--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     alias(libs.plugins.android.application)
     alias(libs.plugins.kotlin.android)
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -64,5 +65,17 @@ dependencies {
     // Retrofit (Alternative HTTP client, if you prefer it over the built-in)
     // implementation("com.squareup.retrofit2:retrofit:2.9.0")
     // implementation("com.squareup.retrofit2:converter-gson:2.9.0") // If using JSON
+
+    // Import the Firebase BoM
+    implementation platform(libs.firebase.bom)
+
+
+    // TODO: Add the dependencies for Firebase products you want to use
+    // When using the BoM, don't specify versions in Firebase dependencies
+    implementation libs.firebase.analytics
+
+
+    // Add the dependencies for any other desired Firebase products
+    // https://firebase.google.com/docs/android/setup#available-libraries
 
 }
