--- a/build.gradle
+++ b/build.gradle
@@ -5,4 +5,5 @@ plugins {
 
 //    dependency for the Google services Gradle plugin
     id 'com.google.gms.google-services' version '4.4.2' apply false
+    id 'com.google.devtools.ksp' version '2.1.0-1.0.29'
 }
