--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,5 +101,6 @@ dependencies {
     // ViewModel and LiveData (For ViewModelScope)
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.2")
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
